iac/demo/kyverno/0-development-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: development
spec: {}
status: {}
