iac/demo/kyverno/3.2-sample-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: test-name-2
  labels:
    team: infra
