iac/demo/kyverno/4-sample-app-invalid.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: my-nginx    
  name: my-nginx
  namespace: development
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-nginx
  strategy: {}
  template:
    metadata:
      labels:
        app: my-nginx
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
status: {}
