iac/demo/kyverno/5-sample-app-valid.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: my-nginx
    team_name: team-A
  name: my-nginx
  namespace: development
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-nginx
  strategy: {}
  template:
    metadata:
      labels:
        app: my-nginx
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
status: {}
